<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="@dimen/menu_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/section_alert_dialog" />

        <Button
            android:id="@+id/buttonAlertSimpleMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_simple_message"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonUserInfoAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_user_info"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/message_margin_top"
            android:text="@string/section_confirm_dialog" />

        <Button
            android:id="@+id/buttonConfirmDeleteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_delete_user"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/message_margin_top"
            android:text="@string/section_edit_dialog" />

        <Button
            android:id="@+id/buttonEditUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit_user_info"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</FrameLayout>